# czateria

./: .gitmodules  CMakeLists.txt  LICENCE.BSD  README.md  czateria.pri  czateria.pro  czatlib.pri  workflow_build_linux.sh  workflow_build_windows.bat  workflow_build_winxp.bat
.github/: workflow_build_linux.sh  workflow_build_windows.bat  workflow_build_winxp.bat
.github/workflows/: build_windows.bat  build_winxp.bat  ccpp.yml  ccpp_win.yml  ccpp_winxp.yml  code_style.yml
czatlib/: CMakeLists.txt  avatarhandler.h  captcha.cpp  captcha.h  chatblocker.h  chatsession.cpp  chatsession.h  chatsessionlistener.cpp  chatsessionlistener.h  conversationstate.h  czatlib.pro  httpsocket.h  icons.cpp  icons.h  loginfailreason.h  loginsession.cpp  loginsession.h  message.cpp  message.h  room.cpp  room.h  roomlistmodel.cpp  roomlistmodel.h  user.cpp  user.h  userlistmodel.cpp  userlistmodel.h  util.cpp  util.h  websocket.h
czatlibtest/: czatlibtest.pro  main.cpp  mocks.h  tst_bar.h  tst_captcha.h  tst_sessions.h
ui/: CMakeLists.txt  appsettings.cpp  appsettings.h  autologindatadialog.cpp  autologindatadialog.h  autologindatadialog.ui  captchadialog.cpp  captchadialog.h  captchadialog.ui  chatsettingsform.ui  chatwidget.ui  chatwindowtabwidget.cpp  chatwindowtabwidget.h  customlistview.cpp  customlistview.h  filebasedlogger.cpp  filebasedlogger.h  main.cpp  mainchatwindow.cpp  mainchatwindow.h  mainchatwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  notificationsupport.cpp  notificationsupport.h  notificationsupport_dbus.cpp  notificationsupport_dbus.h  notificationsupport_msgbox.cpp  notificationsupport_msgbox.h  notificationsupport_native.h  notificationsupport_win10.cpp  notificationsupport_win10.h  qthttpsocket.cpp  qthttpsocket.h  qtwebsocket.cpp  qtwebsocket.h  rsrc.qrc  settingsbasedblocker.cpp  settingsbasedblocker.h  (+7 more)
ui/icons/: optimize.sh  windows.rc
untitled/: main.cpp  untitled.pro
